syntax = "proto3";

package review;
import "user.proto";

message Review {
  string id = 1;
  string title = 2;
  string body = 3;
  int32 rating = 4;
  User user = 5;
}

message GetReviewRequest {
  string review_id = 1;
}

message GetReviewResponse {
  Review review = 1;
}

message SearchReviewsRequest {
  string query = 1;
}

message SearchReviewsResponse {
  repeated Review reviews = 1;
}

message SearchReviewsIdsRequest {
  string query = 1;
}

message SearchReviewsIdsResponse {
  repeated Review reviews = 1;
}

message CreateReviewRequest {
  string review_id = 1;
  string title = 2;
  string body = 3;
  int32 rating = 4;
  string user_id = 5;
}

message CreateReviewResponse {
  Review review = 1;
}


message UpdateReviewRequest {
  string review_id = 1;
  string title = 2;
  string body = 3;
  int32 rating = 4;
}

message UpdateReviewResponse {
  Review review = 1;
}

message DeleteReviewRequest {
  string review_id = 1;
}

message DeleteReviewResponse {
  bool success = 1;
}

service ReviewService {
  rpc GetReview(GetReviewRequest) returns (GetReviewResponse);
  rpc SearchReviews(SearchReviewsRequest) returns (SearchReviewsResponse);
  rpc SearchReviewsIds(SearchReviewsIdsRequest) returns (SearchReviewsIdsResponse);
  rpc CreateReview(CreateReviewRequest) returns (CreateReviewResponse);
  rpc UpdateReview(UpdateReviewRequest) returns (UpdateReviewResponse);
  rpc DeleteReview(DeleteReviewRequest) returns (DeleteReviewResponse);
}

